--- a/.github/workflows/build_push_docker_fork.yml
+++ b/.github/workflows/build_push_docker_fork.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           context: ./server
           file: ./server/Dockerfile
-          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          # platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-server:latest
@@ -94,7 +94,7 @@ jobs:
         with:
           context: ./machine-learning
           file: ./machine-learning/Dockerfile
-          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          # platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-machine-learning:latest
@@ -121,7 +121,7 @@ jobs:
         with:
           context: ./web
           file: ./web/Dockerfile
-          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          # platforms: linux/arm/v7,linux/amd64,linux/arm64
           target: prod
           push: true
           tags: |
@@ -149,7 +149,7 @@ jobs:
         with:
           context: ./nginx
           file: ./nginx/Dockerfile
-          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          # platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-proxy:latest
