--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -22,11 +22,11 @@ COPY package.json package-lock.json ./
 COPY start-server.sh start-microservices.sh ./
 
 RUN mkdir -p /usr/src/app/dist \
-    && apk add --no-cache --virtual build-dependencies build-base python3 vips-dev \
-    && apk add --no-cache libheif vips ffmpeg \
-    && npm install --production \
-    && apk del build-dependencies
+    && apk add --no-cache libheif vips ffmpeg
 
+COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/dist ./dist
+
+RUN npm prune --production
 
 EXPOSE 3001
