--- a/.github/workflows/build_push_docker_fork.yml
+++ b/.github/workflows/build_push_docker_fork.yml
@@ -33,19 +33,17 @@ jobs:
       id: filter
       with:
         filters: |
-          server:
+          backend:
             - 'server/**'
-          machine-learning:
+          ml-worker:
             - 'machine-learning/**'
-          web:
+          webapp:
             - 'web/**'
-          nginx:
+          proxy:
             - 'nginx/**'
-  # This image include both the server and microservices - the two containers can be slitted into separated
-  # service with its coressponding entry file.
-  build_and_push_server_monorepo_latest:
+  build_and_push_backend:
     needs: changes
-    if: ${{ needs.changes.outputs.server == 'true' }}
+    #if: ${{ needs.changes.outputs.backend == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -69,10 +67,10 @@ jobs:
           # platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-server:latest
-  build_and_push_machine_learning_latest:
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/backend:latest
+  build_and_push_ml_worker:
     needs: changes
-    if: ${{ needs.changes.outputs.machine-learning == 'true' }}
+    #if: ${{ needs.changes.outputs.ml-worker == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -96,10 +94,10 @@ jobs:
           # platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-machine-learning:latest
-  build_and_push_web_latest:
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/ml-worker:latest
+  build_and_push_webapp_latest:
     needs: changes
-    if: ${{ needs.changes.outputs.web == 'true' }}
+    #if: ${{ needs.changes.outputs.webapp == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -124,31 +122,31 @@ jobs:
           target: prod
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-web:latest
-  build_and_push_nginx_latest:
-    needs: changes
-    if: ${{ needs.changes.outputs.nginx == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2.0.0
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and Push Proxy
-        uses: docker/build-push-action@v3.1.1
-        with:
-          context: ./nginx
-          file: ./nginx/Dockerfile
-          # platforms: linux/arm/v7,linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/immich-proxy:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/webapp:latest
+  # build_and_push_proxy_latest:
+  #   needs: changes
+  #   if: ${{ needs.changes.outputs.proxy == 'true' }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Set up Docker Buildx
+  #       id: buildx
+  #       uses: docker/setup-buildx-action@v2.0.0
+  #     - name: Log into registry ${{ env.REGISTRY }}
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Build and Push Proxy
+  #       uses: docker/build-push-action@v3.1.1
+  #       with:
+  #         context: ./nginx
+  #         file: ./nginx/Dockerfile
+  #         # platforms: linux/arm/v7,linux/amd64,linux/arm64
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/proxy:latest
